# rust-workspace-template

./: .bumpversion.toml  .pre-commit-config.yaml  .release-plz.toml  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml
.github/: actionlint.yaml  renovate.json5
.github/labels/: label-definition.yaml  labeler.yaml
.github/workflows/: ci.yaml  ci.yml  dist-generate.yml  generate-labels.yml  release-plz.yaml  release-plz.yml  release.yml
crates/dummy-package/: Cargo.toml
