[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/conjikidow/repo"
authors = ["conjikidow"]

[workspace.dependencies]

[profile.dist]
inherits = "release"
lto = "thin"
